fix(grid): align bottom multi-column headers

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -144,7 +144,6 @@
         }
     }
 
-
     // Grouping header
     $delete-group-offset: calc(#{-$button-padding-y} - 1px) !default;
 
@@ -253,6 +252,7 @@
         .k-header {
             height: button-size();
             position: relative;
+            vertical-align: bottom;
         }
 
 
